syntax = "proto3";

package runme.runner.v2alpha1;

import "google/protobuf/wrappers.proto";
import "runme/runner/v2alpha1/config.proto";

option go_package = "github.com/stateful/runme/internal/gen/proto/go/runme/runner/v1;runnerv1";

message Project {
  // root is a root directory of the project.
  // The semantic is the same as for the "--project"
  // flag in "runme".
  string root = 1;

  // env_load_order is list of environment files
  // to try and load env from.
  repeated string env_load_order = 2;
}

message Session {
  string id = 1;

  // env keeps track of session environment variables.
  // They can be modified by executing programs which
  // alter them through "export" and "unset" commands.
  repeated string env = 2;

  // metadata is a map of client specific metadata.
  map<string, string> metadata = 3;
}

message CreateSessionRequest {
  // metadata is a map of client specific metadata.
  map<string, string> metadata = 1;

  // env field provides an initial set of environment variables
  // for a newly created session.
  repeated string env = 2;

  // project from which to load environment variables.
  // They will be appended to the list from the env field.
  // The env field has a higher priority.
  optional Project project = 3;
}

message CreateSessionResponse {
  Session session = 1;
}

message GetSessionRequest {
  string id = 1;
}

message GetSessionResponse {
  Session session = 1;
}

message ListSessionsRequest {}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

message DeleteSessionRequest {
  string id = 1;
}

message DeleteSessionResponse {}

enum ExecuteStop {
  EXECUTE_STOP_UNSPECIFIED = 0;
  EXECUTE_STOP_INTERRUPT = 1;
  EXECUTE_STOP_KILL = 2;
}

// SessionStrategy determines a session selection in
// an initial execute request.
enum SessionStrategy {
  // Uses the session_id field to determine the session.
  // If none is present, a new session is created.
  SESSION_STRATEGY_UNSPECIFIED = 0;
  // Uses the most recent session on the server.
  // If there is none, a new one is created.
  SESSION_STRATEGY_MOST_RECENT = 1;
}

message Winsize {
  uint32 rows = 1;
  uint32 cols = 2;
  uint32 x = 3;
  uint32 y = 4;
}

message ExecuteRequest {
  runme.runner.v2alpha1.ProgramConfig config = 1;

  // input_data is a byte array that will be send as input
  // to the program.
  bytes input_data = 8;

  // stop requests the running process to be stopped.
  // It is allowed only in the consecutive calls.
  ExecuteStop stop = 9;

  // sets pty winsize
  // has no effect in non-interactive mode
  optional Winsize winsize = 10;

  // session_id indicates in which Session the program should execute.
  // Executing in a Session might provide additional context like
  // environment variables.
  string session_id = 20;

  // session_strategy is a strategy for selecting the session.
  SessionStrategy session_strategy = 21;

  // project used to load environment variables from .env files.
  optional Project project = 22;

  // store_last_stdout, if true, will store the stdout of
  // the last ran block in the environment variable `__`.
  bool store_last_stdout = 23;
}

message ExecuteResponse {
  // exit_code is sent only in the final message.
  google.protobuf.UInt32Value exit_code = 1;

  // stdout_data contains bytes from stdout since the last response.
  bytes stdout_data = 2;

  // stderr_data contains bytes from stderr since the last response.
  bytes stderr_data = 3;

  // pid contains the process' PID.
  // This is only sent once in an initial response
  // for background processes.
  google.protobuf.UInt32Value pid = 4;
}

message ResolveEnvRequest {
  oneof source {
    // commands are commands to be executed by the program.
    // The commands are joined and executed as a script.
    CommandList commands = 1;

    // script is code to be executed by the program.
    // Individual lines are joined with the new line character.
    string script = 2;
  }

  // env is a list of additional environment variables
  // that will be injected to the executed program.
  repeated string env = 3;

  // session_strategy is a strategy for selecting the session.
  SessionStrategy session_strategy = 4;

  // project used to load environment variables from .env files.
  optional Project project = 5;

  message CommandList {
    // commands are commands to be executed by the program.
    // The commands are joined and executed as a script.
    // For example: ["echo 'Hello, World'", "ls -l /etc"].
    repeated string items = 1;
  }
}

message ResolveEnvResponse {
  // resolved_env is a list of resolved environment variables.
  repeated ResolvedEnv resolved_env = 1;

  // unresolved_env is a list of environment variables
  // that couldn't be resolved.
  repeated UnresolvedEnv unresolved_env = 2;

  message ResolvedEnv {
    string key = 1;
    string original_value = 2;
    string resolved_value = 3;
    Source source = 4;
  }

  message UnresolvedEnv {
    string key = 1;
    string original_value = 2;
  }

  enum Source {
    SOURCE_UNSPECIFIED = 0;
    SOURCE_ENV = 1;
    SOURCE_SESSION = 2;
    SOURCE_PROJECT = 3;
  }
}

service RunnerService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {}
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {}
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse) {}

  // Execute executes a program. Examine "ExecuteRequest" to explore
  // configuration options.
  //
  // It's a bidirectional stream RPC method. It expects the first
  // "ExecuteRequest" to contain details of a program to execute.
  // Subsequent "ExecuteRequest" should only contain "input_data" as
  // other fields will be ignored.
  rpc Execute(stream ExecuteRequest) returns (stream ExecuteResponse) {}

  rpc ResolveEnv(ResolveEnvRequest) returns (ResolveEnvResponse) {}
}
